--- a/tail.html
+++ b/tail.html
@@ -1,7 +1,7 @@
 ---
 ## Distribution license
 Unless otherwise noted all original material in this page written by
-Diomidis Spinellis and Marios Fragkoulis is provided under the terms of the
+Diomidis Spinellis is provided under the terms of the
 [Creative Commons Attribution-ShareAlike 3.0 Greece](http://creativecommons.org/licenses/by-sa/3.0/gr/deed.en) license.
 
 ![Creative Commons Attribution-ShareAlike 3.0](http://creativecommons.org/images/public/somerights20.png)
