Use local CC image

--- a/tail.html
+++ b/tail.html
@@ -4,7 +4,7 @@ Unless otherwise noted all original material in this page written by
 Diomidis Spinellis is provided under the terms of the
 [Creative Commons Attribution-ShareAlike 3.0 Greece](http://creativecommons.org/licenses/by-sa/3.0/gr/deed.en) license.
 
-![Creative Commons Attribution-ShareAlike 3.0](http://creativecommons.org/images/public/somerights20.png)
+![Creative Commons Attribution-ShareAlike 3.0](a/somerights20.png)
     </script> <!-- Remaining stuff {{{1 -->
 </section>
 
